use correct letter-spacing value

--- a/packages/circuit-ui/components/Headline/Headline.module.css
+++ b/packages/circuit-ui/components/Headline/Headline.module.css
@@ -1,7 +1,6 @@
 .base {
   font-weight: var(--cui-font-weight-bold);
   color: var(--cui-fg-normal);
-  letter-spacing: -0.03em;
   letter-spacing: var(--cui-letter-spacing);
 }
 
